[gd_scene load_steps=8 format=3 uid="uid://b524l3p5qsr2x"]

[ext_resource type="Texture2D" uid="uid://cddpxdsre4t0m" path="res://assets/patron_choice/background/peaceful_background.png" id="1_hemxi"]
[ext_resource type="Script" path="res://scratch/vignette.gd" id="1_iddtf"]
[ext_resource type="Shader" path="res://shaders/shader.gdshader" id="2_l8gbl"]
[ext_resource type="Script" path="res://shaders/fx.gd" id="3_bary3"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_vmm2r"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rjdqm"]
seamless = true
seamless_blend_skirt = 0.7
noise = SubResource("FastNoiseLite_vmm2r")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p4456"]
shader = ExtResource("2_l8gbl")
shader_parameter/LABEL = false
shader_parameter/POST_PROCESSING = true
shader_parameter/MOUSE = Vector2(20, 20)
shader_parameter/DISABLE = false
shader_parameter/use_exclude_colors = true
shader_parameter/exclude_color1 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color2 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color3 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color4 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color5 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color6 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color7 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color8 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/displace_x = 0
shader_parameter/displace_y = 0
shader_parameter/displace_repeat = true
shader_parameter/auto_pan_speed = Vector2(0, 0)
shader_parameter/replace_color1 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color1 = Color(0, 0, 0, 1)
shader_parameter/replace_color2 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color2 = Color(0, 0, 0, 1)
shader_parameter/replace_color3 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color3 = Color(0, 0, 0, 1)
shader_parameter/replace_color4 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color4 = Color(0, 0, 0, 1)
shader_parameter/replace_color5 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color5 = Color(0, 0, 0, 1)
shader_parameter/replace_color_outline = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/replace_with_color_outline = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/auto_replace_color = Color(0, 0, 0, 1)
shader_parameter/auto_replace_replace_original_color = false
shader_parameter/auto_replace_replace_original_color_with = Color(0, 0, 0, 1)
shader_parameter/auto_replace_to_color = Color(0, 0, 0, 1)
shader_parameter/auto_replace_speed = 0.0
shader_parameter/auto_replace_start_time = 0.0
shader_parameter/tint_color = Color(0, 0, 0, 1)
shader_parameter/tint_strength = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_strength = 0.0
shader_parameter/auto_flash_color = Color(1, 1, 1, 1)
shader_parameter/auto_flash_speed = 0.0
shader_parameter/auto_flash_bound1 = 0.0
shader_parameter/auto_flash_bound2 = 1.0
shader_parameter/auto_flash_start_time = 0.0
shader_parameter/red_correct = 0.0
shader_parameter/green_correct = 0.0
shader_parameter/blue_correct = 0.0
shader_parameter/gray_correct = 0.0
shader_parameter/brightness_correct = 1.0
shader_parameter/contrast_correct = 1.0
shader_parameter/saturation_correct = 1.0
shader_parameter/scanline_color = Color(0.98, 0.69, 0.23, 1)
shader_parameter/scanline_strength = 1.0
shader_parameter/scanline_left_to_right_position = -0.001
shader_parameter/scanline_top_to_bottom_position = -0.001
shader_parameter/scanline_topleft_to_bottomright_position = -0.001
shader_parameter/scanline_topright_to_bottomleft_position = -0.001
shader_parameter/auto_scanline_left_to_right_on = false
shader_parameter/auto_scanline_left_to_right_reverse = false
shader_parameter/auto_scanline_left_to_right_start_time = 0.0
shader_parameter/auto_scanline_left_to_right_scan_duration = 0.5
shader_parameter/auto_scanline_left_to_right_delay = 1.0
shader_parameter/auto_scanline_top_to_bottom_on = false
shader_parameter/auto_scanline_top_to_bottom_reverse = false
shader_parameter/auto_scanline_top_to_bottom_start_time = 0.0
shader_parameter/auto_scanline_top_to_bottom_scan_duration = 0.5
shader_parameter/auto_scanline_top_to_bottom_delay = 1.0
shader_parameter/auto_scanline_topleft_to_bottomright_on = false
shader_parameter/auto_scanline_topleft_to_bottomright_reverse = false
shader_parameter/auto_scanline_topleft_to_bottomright_start_time = 0.0
shader_parameter/auto_scanline_topleft_to_bottomright_scan_duration = 0.5
shader_parameter/auto_scanline_topleft_to_bottomright_delay = 1.0
shader_parameter/auto_scanline_topright_to_bottomleft_on = false
shader_parameter/auto_scanline_topright_to_bottomleft_reverse = false
shader_parameter/auto_scanline_topright_to_bottomleft_start_time = 0.0
shader_parameter/auto_scanline_topright_to_bottomleft_scan_duration = 0.5
shader_parameter/auto_scanline_topright_to_bottomleft_delay = 1.0
shader_parameter/glow_color = Color(1, 1, 1, 1)
shader_parameter/glow_thickness = 0
shader_parameter/glow_diagonals = false
shader_parameter/auto_glow_speed = 0.0
shader_parameter/auto_glow_bound = 0.75
shader_parameter/auto_glow_start_time = 0.0
shader_parameter/disintegrate_seed = 1
shader_parameter/disintegrate_color = Color(0, 0, 0, 1)
shader_parameter/disintegrate_strength = 0.0
shader_parameter/disintegrate_alpha_bound1 = 0.0
shader_parameter/disintegrate_alpha_bound2 = 0.0
shader_parameter/disintegrate_as_static = false
shader_parameter/auto_disintegrate_random_seed_speed = 0.0
shader_parameter/fog_enabled = false
shader_parameter/fog_opacity = 0.5
shader_parameter/fog_density = 0.25
shader_parameter/fog_speed = Vector2(-0.02, 0)
shader_parameter/fog_noise_texture = SubResource("NoiseTexture2D_rjdqm")
shader_parameter/vertical_colorline_color = Color(1, 1, 1, 1)
shader_parameter/vertical_colorline_spacing = 2
shader_parameter/vertical_colorline_strength = 0.0
shader_parameter/horizontal_colorline_color = Color(1, 1, 1, 1)
shader_parameter/horizontal_colorline_spacing = 2
shader_parameter/horizontal_colorline_strength = 0.0
shader_parameter/checker_color = Color(0.2, 0.2, 0.2, 1)
shader_parameter/checker_strength = 0.0
shader_parameter/checker_x_size = 1
shader_parameter/checker_y_size = 1
shader_parameter/checker_x_pattern = 2
shader_parameter/checker_y_pattern = 2
shader_parameter/checker_contrast_amount = 1.0
shader_parameter/checker_contrast_ratio = 0.5
shader_parameter/mouselight_on = false
shader_parameter/mouselight_color = Color(1, 1, 1, 1)
shader_parameter/mouselight_strength = 0.5
shader_parameter/mouselight_size = 8
shader_parameter/mouselight_soften_edges = true
shader_parameter/mouselight_checker = false
shader_parameter/auto_mouselight_flicker_speed = 10.0
shader_parameter/auto_mouselight_flicker_bound = 3.0
shader_parameter/cut_left = 0.0
shader_parameter/cut_right = 0.0
shader_parameter/cut_top = 0.0
shader_parameter/cut_bottom = 0.0
shader_parameter/vignette_on = true
shader_parameter/vignette_layer = true
shader_parameter/vignette_ignore_transparent = false
shader_parameter/vignette_color = Color(0.670588, 0.0705882, 0.32549, 1)
shader_parameter/vignette_radius = 1.0
shader_parameter/vignette_edge_softness = 0.0
shader_parameter/vignette_contrast = 1.0
shader_parameter/vignette_aspect_x = 0.9
shader_parameter/vignette_aspect_y = 0.8
shader_parameter/vignette_pulse_enable = false
shader_parameter/vignette_pulse_amplitude = 0.1
shader_parameter/vignette_pulse_speed = 0.5
shader_parameter/transparency = 1.0
shader_parameter/auto_flicker_speed = 0.0
shader_parameter/auto_flicker_bound = 0.0
shader_parameter/auto_flicker_start_time = 0.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_iddtf")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2.00556)
texture = ExtResource("1_hemxi")
centered = false

[node name="Vignette" type="ColorRect" parent="."]
z_index = 1000
material = SubResource("ShaderMaterial_p4456")
offset_right = 640.0
offset_bottom = 360.0
mouse_filter = 2

[node name="FX" type="AnimationPlayer" parent="Vignette"]
script = ExtResource("3_bary3")

[node name="Controls" type="Node2D" parent="."]
position = Vector2(30, -24)

[node name="SlightButton" type="Button" parent="Controls"]
offset_left = 202.0
offset_top = 200.0
offset_right = 239.0
offset_bottom = 221.0
text = "Slight"

[node name="ModerateButton" type="Button" parent="Controls"]
offset_left = 255.0
offset_top = 200.0
offset_right = 311.0
offset_bottom = 221.0
text = "Moderate"

[node name="HeavyButton" type="Button" parent="Controls"]
offset_left = 328.0
offset_top = 200.0
offset_right = 366.0
offset_bottom = 221.0
text = "Heavy"

[node name="SevereButton" type="Button" parent="Controls"]
offset_left = 383.0
offset_top = 200.0
offset_right = 426.0
offset_bottom = 221.0
text = "Severe"

[node name="PulsateButton" type="Button" parent="Controls"]
offset_left = 202.0
offset_top = 225.0
offset_right = 248.0
offset_bottom = 246.0
text = "Pulsate"

[node name="PulsateStrongButton" type="Button" parent="Controls"]
offset_left = 251.0
offset_top = 225.0
offset_right = 336.0
offset_bottom = 246.0
text = "Pulsate Strong"

[node name="PulsateInsaneButton" type="Button" parent="Controls"]
offset_left = 340.0
offset_top = 225.0
offset_right = 427.0
offset_bottom = 246.0
text = "Pulsate Insane"

[node name="PulsateStopButton" type="Button" parent="Controls"]
offset_left = 279.0
offset_top = 250.0
offset_right = 353.0
offset_bottom = 271.0
text = "Stop Pulsate"

[connection signal="pressed" from="Controls/SlightButton" to="." method="_on_slight_button_pressed"]
[connection signal="pressed" from="Controls/ModerateButton" to="." method="_on_moderate_button_pressed"]
[connection signal="pressed" from="Controls/HeavyButton" to="." method="_on_heavy_button_pressed"]
[connection signal="pressed" from="Controls/SevereButton" to="." method="_on_severe_button_pressed"]
[connection signal="pressed" from="Controls/PulsateButton" to="." method="_on_pulsate_button_pressed"]
[connection signal="pressed" from="Controls/PulsateStrongButton" to="." method="_on_pulsate_strong_button_pressed"]
[connection signal="pressed" from="Controls/PulsateInsaneButton" to="." method="_on_pulsate_insane_button_pressed"]
[connection signal="pressed" from="Controls/PulsateStopButton" to="." method="_on_pulsate_stop_button_pressed"]
